feat: add new handlers
