# handler/questionAnswer/deleteQuestionAnswer.go
@@ -12,7 +12,7 @@ import (
 
 // @Summary Delete questionAnswer
 // @Description Delete a job questionAnswer
-// @Tags Questions
+// @Tags QuestionsAnswer
 // @Accept json
 // @Produce json
 // @Param id query string true "Question identification"
